--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://rajmundw.github.io/smallWebsiteWithFormAndSlider.io",
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -14,6 +15,8 @@
     "gulp-sourcemaps": "^2.6.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
