--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://rajmundw.github.io/smallWebsiteWithFormAndSlider.io",
+  "homepage": "https://rajmundw.github.io/smallWebsiteWithFormAndSlider.io",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
@@ -15,7 +18,7 @@
     "gulp-sourcemaps": "^2.6.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
