--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://rajmundw.github.io/smallWebsiteWithFormAndSlider.io",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
